src/main/java/com/example/shopapp/error/exception/ObjectNotFoundException.java
package com.example.shopapp.error.exception;

public class ObjectNotFoundException extends Exception{

    public ObjectNotFoundException(String message) {
        super(message);
    }
}
